--- a/config-repo/order-default.yml
+++ b/config-repo/order-default.yml
@@ -14,5 +14,4 @@ hlp:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/order
-
-from: default-environment-1.0
+title: "default-environment-1.0"
